--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://main.d2glgywy30hn9v.amplifyapp.com
 NEXTAUTH_SECRET="B6+gBMa/hKdYOJGL/JNGUIQ0GvpjlZEWXEcHpSO+qlA="
