--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXTAUTH_URL=https://main.d2glgywy30hn9v.amplifyapp.com
+# NEXTAUTH_URL=https://main.d2glgywy30hn9v.amplifyapp.com
+NEXTAUTH_URL=`https://{process.env.AWS_BRANCH}.{process.env.AWS_APP_ID}.amplifyapp.com`
 NEXTAUTH_SECRET="B6+gBMa/hKdYOJGL/JNGUIQ0GvpjlZEWXEcHpSO+qlA="
 console.log('------------------------------------------------------------------------------')
 console.log('------------------------------------------------------------------------------')
