--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-# NEXTAUTH_URL=https://main.d2glgywy30hn9v.amplifyapp.com
-NEXTAUTH_URL=`https://{process.env.AWS_BRANCH}.{process.env.AWS_APP_ID}.amplifyapp.com`
-NEXTAUTH_SECRET="B6+gBMa/hKdYOJGL/JNGUIQ0GvpjlZEWXEcHpSO+qlA="
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
-console.log(process.env.AWS_BRANCH)
-console.log(process.env.AWS_APP_ID)
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
-console.log('------------------------------------------------------------------------------')
+# # NEXTAUTH_URL=https://main.d2glgywy30hn9v.amplifyapp.com
+# NEXTAUTH_URL=`https://{process.env.AWS_BRANCH}.{process.env.AWS_APP_ID}.amplifyapp.com`
+# NEXTAUTH_SECRET="B6+gBMa/hKdYOJGL/JNGUIQ0GvpjlZEWXEcHpSO+qlA="
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
+# console.log(process.env.AWS_BRANCH)
+# console.log(process.env.AWS_APP_ID)
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
+# console.log('------------------------------------------------------------------------------')
