--- a/amplify.yml
+++ b/amplify.yml
@@ -1,4 +1,10 @@
 version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - npm ci --cache .npm --prefer-offline
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
@@ -9,8 +15,9 @@ frontend:
         node -e "console.log('NEXTAUTH_SECRET=' + require('crypto').randomBytes(32).toString('base64'))" > .env
         - echo "NEXTAUTH_URL=https://$AWS_BRANCH.$AWS_APP_ID.amplifyapp.com" >> .env
         - npm run build
+        - ls -la
   artifacts:
-    baseDirectory: .next
+    baseDirectory: out
     files:
       - '**/*'
   cache:
