--- a/amplify.yml
+++ b/amplify.yml
@@ -17,7 +17,7 @@ frontend:
         - npm run build
         - ls -la
   artifacts:
-    baseDirectory: out
+    baseDirectory: .next
     files:
       - '**/*'
   cache:
