--- a/amplify.yml
+++ b/amplify.yml
@@ -1,15 +1,17 @@
 version: 1
 backend:
   phases:
-    build:
+    preBuild:
       commands:
         - npm ci --cache .npm --prefer-offline
+    build:
+      commands:
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
       commands:
-        - npm ci --cache .npm --prefer-offline
+        # - npm ci --cache .npm --prefer-offline
     build:
       commands:
         - node -e "console.log('NEXTAUTH_SECRET=' + require('crypto').randomBytes(32).toString('base64'))" > .env
